Documentation edits made through Mintlify web editor

--- a/introduction.mdx
+++ b/introduction.mdx
@@ -1,18 +1,9 @@
 ---
 title: Introduction
-description: 'Welcome to the home of your new documentation'
+description: 'Learn how to put Anchor to use effectively!'
 ---
 
-<img
-  className="block dark:hidden"
-  src="/images/hero-light.svg"
-  alt="Hero Light"
-/>
-<img
-  className="hidden dark:block"
-  src="/images/hero-dark.svg"
-  alt="Hero Dark"
-/>
+
 
 ## Setting up
 
