Documentation edits made through Mintlify web editor

--- a/introduction.mdx
+++ b/introduction.mdx
@@ -2,61 +2,32 @@
 title: Introduction
 description: 'Learn how to put Anchor to use effectively!'
 ---
+## 
+> Welcome to Anchor, your all-in-one solution to community and staff management. Take action with ease, ensure a safe and secure server, and streamline staff management. Managing your community with the stability of an anchored ship.
 
 
 
-## Setting up
-
-The first step to world-class documentation is setting up your editing environments.
-
-<CardGroup cols={2}>
-  <Card
-    title="Edit Your Docs"
-    icon="pen-to-square"
-    href="https://mintlify.com/docs/quickstart"
-  >
-    Get your docs set up locally for easy development
-  </Card>
-  <Card
-    title="Preview Changes"
-    icon="image"
-    href="https://mintlify.com/docs/development"
-  >
-    Preview your changes before you push to make sure they're perfect
-  </Card>
-</CardGroup>
-
-## Make it yours
-
-Update your docs to your brand and add valuable content for the best user conversion.
 
 <CardGroup cols={2}>
   <Card
-    title="Customize Style"
-    icon="palette"
+    title="anchor.xyz"
+    icon="link"
     href="https://mintlify.com/docs/settings/global"
   >
-    Customize your docs to your company's colors and brands
+    want to know more? View our website!
   </Card>
   <Card
-    title="Reference APIs"
-    icon="code"
+    title="Discord Server"
+    icon="discord"
     href="https://mintlify.com/docs/api-playground/openapi"
   >
-    Automatically generate endpoints from an OpenAPI spec
+    Need a little help? Join now.
   </Card>
   <Card
-    title="Add Components"
-    icon="screwdriver-wrench"
+    title="Status"
+    icon="wifi"
     href="https://mintlify.com/docs/components/accordion"
   >
-    Build interactive features and designs to guide your users
-  </Card>
-  <Card
-    title="Get Inspiration"
-    icon="stars"
-    href="https://mintlify.com/customers"
-  >
-    Check out our showcase of our favorite documentation
+    Want to check on the status of our services, or upcoming maintenance 
   </Card>
 </CardGroup>
